--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
       <div>
         <h1>YamiAppStore</h1>
-        <div class="tagline">YamiAppStore offers exclusive games you can download for free.</div>
+        <div class="tagline">YamiAppStore – Download Android & ios Games & Apps.</div>
       </div>
     </header>
 
@@ -641,6 +641,7 @@
 </body>
 
 </html>
+
 
 
 
